FIX: home align readmore

--- a/public/style.css
+++ b/public/style.css
@@ -266,6 +266,7 @@ main>article {
 .posts {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    align-items: baseline;
 }
 
 .read_more {
@@ -273,6 +274,7 @@ main>article {
     justify-self: end;
     line-height: 100%;
     color: var(--clr-accent);
+    margin: 0;
 }
 
 .read_more:hover,
